# SOMA-bench-backend

./: README.md  pyproject.toml
soma_bench_backend/: config.py  db.py  executor.py  main.py  schemas.py  scoring.py
